force-app/main/default/objects/IT_Alert_Notification_Control__c/IT_Alert_Notification_Control__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used to track IT alerts sent for the day.</description>
    <label>IT Alert Notification Control</label>
</CustomObject>