force-app/main/default/objects/IT_Alert_Notification_Control__c/fields/Last_Notification_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Notification_Time__c</fullName>
    <label>Last Notification Time</label>
    <type>DateTime</type>
</CustomField>