force-app/main/default/objects/IT_Alert_Notification_Control__c/fields/Next_Alert_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Alert_Date_Time__c</fullName>
    <description>Shows when the next alert would be sent.</description>
    <label>Next Alert Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>