force-app/main/default/objects/IT_Alert_Notification_Control__c/fields/Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Sent for Today?</label>
    <type>Checkbox</type>
</CustomField>