force-app/main/default/objects/IT_Alert_Notification_Control__c/fields/Repeat_Alert__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If set to true, an email alert will be sent repeatedly for the specified time interval.</inlineHelpText>
    <label>Repeat Alert</label>
    <type>Checkbox</type>
</CustomField>